desk top design

--- a/index.html
+++ b/index.html
@@ -15,46 +15,49 @@
   </style>
 </head>
 <body>
-  <header role="banner">
-   <p class="title-one">  Reliable, efficient delivery  </p>
-   <h2 class="title-two">Powered by Technology</h2>
-   <p class="def">Our Artificial Intelligence powered tools use millions of project data points 
-      to ensure that your project is successful</p>
-  </header>
+
   <main role="main">
+    <div class="container">
   
-  
+    <div class="box head">
+      <div class='cont'>
+      <p class="title-one">  Reliable, efficient delivery  </p>
+      <h2 class="title-two">Powered by Technology</h2>
+      <p class="def">Our Artificial Intelligence powered tools use millions of project data points 
+         to ensure that your project is successful</p>
+      </div>
+      </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimate
-  <div class='supervisor'>
+  <div class='supervisor box'>
     <p class="title-supervisor">Supervisor</p>
-    <p>Monitors activity to identify project roadblocks</p>
+    <p class="desc-supervisor">Monitors activity to identify project roadblocks</p>
+    <img  class="icon" src="images/icon-supervisor.svg" alt="supervisor-image" />
   </div>
-  <div class='team-builder'>
+  <div class='team-builder box'>
     <p class="title-team">Team Builder</p>
-    <p>Scans our talent network to create the optimal team for your project</p>
-  </div>
-  <div class='karma'>
-    <p class="title-karama">Karma</p>
-    <p>  Scans our talent network to create the optimal team for your project </p>
-  </div>
-  <div class='calculator'>
-    <p class="Calculator">  Calculator</p>
-    <p>  Uses data from past projects to provide better delivery estimate    </p>
-  </div>
+    <p class="desc-team">Scans our talent network to create the optimal team for your project</p>
+    <img class="icon" src="images/icon-team-builder.svg" alt="team-builder-image" />
 
+  </div>
+  <div class='karma box'>
+    <p class="title-karama">Karma</p>
+    <p class="desc-karama">  Regulary evaluate out talent to ensure quality</p>
+    <img  class="icon" src="images/icon-karma.svg" alt="karama-image" />
+
+  </div>
+  <div class='calculator box'>
+    <p class="calculator-title">  Calculator</p>
+    <p class="desc-calculator">  Uses data from past projects to provide better delivery estimate </p>
+    <img class="icon" src="images/icon-calculator.svg" alt="supervisor-image" />
+
+  </div>
+</div>
 </main>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Dayan Yenesew</a>.
     </p>
   </footer>
 </body>
